--- a/static/style.css
+++ b/static/style.css
@@ -10,25 +10,6 @@ footer {
   font-style: italic;
 }
 
-.messages {
-  display: block;
-  height: 350px;
-  overflow-y: scroll;
-  border: solid 1px gray;
-}
-
-.messages table {
-  width: 100%;
-}
-
-.username {
-  font-weight: bold;
-  padding-right: 5px;
-  padding-left: 5px;
-  width: 100px;
-}
-
-textarea {
-  width: 100%;
-  margin-top: 20px;
+a {
+  cursor: pointer;
 }
